melhorias na estilisação e etc IA foi adicionanda crud do FEED ta funcionando